<resources>
    <string name="app_name">Collector</string>

    <!--- GENERELL -->
    <string name="btn_update">Update</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_add">Add</string>

    <!--- activity_collection -->
    <string name="btn_select">Select</string>

    <!--- activity_database -->
    <string name="txt_manage_title">Manage Data</string>
    <string name="btn_mng_author">Author</string>
    <string name="btn_mng_director">Director</string>
    <string name="btn_friends">Friends</string>
    <string name="btn_language">Language</string>
    <string name="btn_mng_genre">Genre</string>
    <string name="btn_mng_history">History</string>
    <string name="btn_mng_system">System</string>
    <string name="btn_mng_parental">Parental</string>
    <string name="btn_mng_publisher">Publisher</string>
    <string name="btn_mng_studio">Studio</string>
    <string name="txt_reset_title">Reset Tables</string>
    <string name="btn_reset_friends">Reset table friends</string>
    <string name="btn_reset_language">Reset table language</string>
    <string name="btn_reset_genre">Reset table Genre</string>
    <string name="btn_reset_system">Reset table System</string>
    <string name="btn_reset_parental">Reset table Parental</string>
    <string name="btn_reset_publisher">Reset table Publisher</string>
    <string name="btn_reset_author">Reset table Author</string>
    <string name="btn_reset_studio">Reset table Studio</string>
    <string name="btn_reset_director">Reset table Director</string>
    <string name="btn_reset_history">Reset table History</string>

    <!--- activity_delete -->
    <string name="txt_choosed">Do you want remove</string>
    <string name="txt_item">NAME DER AUSWAHL</string>
    <string name="txt_delete">from your collection?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>

    <!--- activity_details -->
    <string name="btn_edit">Edit</string>
    <string name="txt_year">Year</string>
    <string name="txt_ean">EAN Code</string>
    <string name="txt_title">Title</string>
    <string name="txt_genre">Genre</string>
    <string name="txt_place">Place</string>
    <string name="view_thumbnail">Thumbnail</string>
    <string name="txt_language">Language</string>
    <string name="txt_publisher">Publisher</string>
    <string name="txt_author">Author</string>
    <string name="txt_director">Director</string>
    <string name="txt_studio">Studio</string>
    <string name="txt_system">System</string>

    <!--- activity_filter_result -->
    <string name="btn_details">Details</string>

    <!--- activity_friends -->
    <string name="tf_first_name">First name</string>
    <string name="tf_last_name">Last name</string>

    <!--- activity_info -->
    <string name="txt_versionTitel">App Version:</string>
    <string name="txt_version">0.01</string>
    <string name="txt_programmerTitel">Programmed by:</string>
    <string name="txt_programmer">Mathias Weigert</string>
    <string name="btn_settings">Database</string>

    <!--- activity_item -->
    <string name="tf_publisher">Publisher</string>
    <string name="txt_rating">FSK</string>
    <string name="cb_0">0</string>
    <string name="cb_6">6</string>
    <string name="cb_12">12</string>
    <string name="cb_16">16</string>
    <string name="cb_18">18</string>
    <string name="tf_ean">EAN Code</string>
    <string name="tf_title">Title</string>
    <string name="rb_book">Book</string>
    <string name="rb_movie">Movie</string>
    <string name="rb_game">Game</string>
    <string name="cb_lent">Lent</string>
    <string name="cb_dvd">DVD</string>
    <string name="cb_blueray">BlueRay</string>
    <string name="btn_search">Search</string>

    <!-- activity_lent -->
    <string name="btn_set">Ok</string>

    <!--- activity_main -->
    <string name="btn_newItem">New Item</string>
    <string name="btn_collection">Collection</string>
    <string name="btn_rental">Lent Items</string>
    <string name="btn_export">Export Database</string>
    <string name="btn_info">Information</string>

    <!--- activity_rental -->
    <string name="txt_rental">Lend items</string>

    <!--- activity_setting -->
    <string name="btn_database">Database</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_table">TableActivity</string>

    <!--- activity_table -->
    <string name="btn_add_item">Add</string>
    <string name="btn_remove_item">Remove</string>
</resources>

