<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:theme="@android:style/Theme.Material"
                tools:context="ch.riverworld.collector.DetailsActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:background="#817272"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/sw_lent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/cb_lent"
                android:theme="@android:style/Theme.Material"/>

            <ImageView
                android:id="@+id/imageView"
                style="@android:style/Theme.Material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/pdefault"
                android:contentDescription="@string/view_thumbnail"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:numStars="5"
                android:rating="1"
                android:stepSize="1"
                android:theme="@android:style/Theme.Material"/>

            <TextView
                android:id="@+id/txt_ean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ean"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:theme="@android:style/Theme.Material"/>

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:theme="@android:style/Theme.Material"/>

            <TextView
                android:id="@+id/txt_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_genre"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:theme="@android:style/Theme.Material"/>

            <TextView
                android:id="@+id/txt_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_year"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:theme="@android:style/Theme.Material"/>

            <TextView
                android:id="@+id/txt_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_language"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_detail_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:clickable="false"
                    android:enabled="false"
                    android:text="@string/rb_book"
                    android:theme="@android:style/Theme.Material"/>

                <RadioButton
                    android:id="@+id/rb_detail_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="false"
                    android:enabled="false"
                    android:text="@string/rb_game"
                    android:theme="@android:style/Theme.Material"/>

                <RadioButton
                    android:id="@+id/rb_detail_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:clickable="false"
                    android:enabled="false"
                    android:text="@string/rb_movie"
                    android:theme="@android:style/Theme.Material"/>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_publisher"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/txt_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_author"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_details_dvd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:enabled="false"
                    android:layout_gravity="start"
                    android:text="@string/cb_dvd"/>

                <CheckBox
                    android:id="@+id/cb_details_blueray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:enabled="false"
                    android:layout_gravity="end"
                    android:text="@string/cb_blueray"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_director"
                android:id="@+id/txt_director"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_studio"
                android:id="@+id/txt_studio"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_system"
                android:id="@+id/txt_system"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_0"
                    android:clickable="false"
                    android:enabled="false"
                    android:id="@+id/cb_details_0"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_6"
                    android:clickable="false"
                    android:enabled="false"
                    android:id="@+id/cb_details_6"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_12"
                    android:clickable="false"
                    android:enabled="false"
                    android:id="@+id/cb_details_12"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_16"
                    android:clickable="false"
                    android:enabled="false"
                    android:id="@+id/cb_details_16"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_18"
                    android:clickable="false"
                    android:enabled="false"
                    android:id="@+id/cb_details_18"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonOnClick"
                android:text="@string/btn_edit"
                android:theme="@android:style/Theme.Material"/>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buttonOnClick"
                android:text="@string/btn_remove_item"
                android:theme="@android:style/Theme.Material"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
