<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#817272"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:theme="@android:style/Theme.Material"
                tools:context="ch.riverworld.collector.DatabaseActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/scrollView"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_manage_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/txt_manage_title"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Button
                android:id="@+id/btn_mng_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txt_manage_title"
                android:onClick="buttonOnClick"
                android:text="@string/btn_mng_author"/>

            <Button
                android:id="@+id/btn_mng_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_author"
                android:onClick="buttonOnClick"
                android:text="@string/btn_mng_director"/>

            <Button
                android:id="@+id/btn_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_author"
                android:onClick="buttonOnClick"
                android:text="@string/btn_friends"/>

            <Button
                android:id="@+id/btn_mng_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_language"
                android:onClick="buttonOnClick"
                android:text="@string/btn_mng_genre"/>

            <Button
                android:id="@+id/btn_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_friends"
                android:onClick="buttonOnClick"
                android:text="@string/btn_language"/>

            <Button
                android:id="@+id/btn_mng_parental"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_mng_system"
                android:onClick="buttonOnClick"
                android:text="@string/btn_mng_parental"/>

            <Button
                android:id="@+id/btn_mng_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_mng_publisher"
                android:onClick="buttonOnClick"
                android:text="@string/btn_mng_publisher"/>

            <Button
                android:id="@+id/btn_mng_studio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_mng_publisher"
                android:onClick="buttonOnClick"
                android:text="@string/btn_mng_studio"/>

            <Button
                android:id="@+id/btn_mng_system"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_mng_studio"
                android:onClick="buttonOnClick"
                android:text="@string/btn_mng_system"/>

            <TextView
                android:id="@+id/txt_reset_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_mng_parental"
                android:singleLine="true"
                android:text="@string/txt_reset_title"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Button
                android:id="@+id/btn_reset_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txt_reset_title"
                android:onClick="buttonOnClick"
                android:text="@string/btn_reset_author"/>

            <Button
                android:id="@+id/btn_reset_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_reset_author"
                android:onClick="buttonOnClick"
                android:text="@string/btn_reset_director"/>

            <Button
                android:id="@+id/btn_reset_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_reset_director"
                android:onClick="buttonOnClick"
                android:text="@string/btn_reset_friends"/>

            <Button
                android:id="@+id/btn_reset_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_reset_friends"
                android:onClick="buttonOnClick"
                android:text="@string/btn_reset_genre"
                />

            <Button
                android:id="@+id/btn_reset_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_reset_genre"
                android:onClick="buttonOnClick"
                android:text="@string/btn_reset_language"/>

            <Button
                android:id="@+id/btn_reset_parental"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_reset_language"
                android:onClick="buttonOnClick"
                android:text="@string/btn_reset_parental"/>

            <Button
                android:id="@+id/btn_reset_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_reset_parental"
                android:onClick="buttonOnClick"
                android:text="@string/btn_reset_publisher"/>

            <Button
                android:id="@+id/btn_reset_studio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_reset_publisher"
                android:onClick="buttonOnClick"
                android:text="@string/btn_reset_studio"/>

            <Button
                android:id="@+id/btn_reset_system"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btn_reset_studio"
                android:onClick="buttonOnClick"
                android:text="@string/btn_reset_system"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
