<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.riverworld.collector.MainActivity"
    android:theme="@android:style/Theme.Material"
    android:background="#817272">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_newItem"
            android:id="@+id/btn_newItem"
            android:onClick="buttonOnClick"
            android:theme="@android:style/Theme.Material" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_collection"
            android:id="@+id/btn_collection"
            android:onClick="buttonOnClick"
            android:theme="@android:style/Theme.Material" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_rental"
            android:id="@+id/btn_rental"
            android:onClick="buttonOnClick"
            android:theme="@android:style/Theme.Material" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_export"
            android:id="@+id/btn_export"
            android:onClick="buttonOnClick"
            android:theme="@android:style/Theme.Material"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_info"
        android:id="@+id/btn_info"
        android:onClick="buttonOnClick"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:theme="@android:style/Theme.Material" />
</RelativeLayout>
